[package]
name = "incremental-topo"
version = "0.1.2"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
description = "Data structure to maintain an incremental topological ordering over a collection of values"
repository = "https://github.com/declanvk/incremental-topo/"
documentation = "https://docs.rs/incremental-topo/"
readme = "README.md"
edition = "2018"

keywords = ["data-structures", "dag", "graph", "incremental", "topological"]
categories = ["algorithms", "data-structures"]

license = "MIT/Apache-2.0"


[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
slab = "0.4.6"
log = "0.4.17"

[dev-dependencies]
pretty_env_logger = "0.4.0"
failure = "0.1.8"
failure_derive = "0.1.8"
ordered-float = "3.0.0"
criterion = "0.3.6"
rand = "0.8.5"

[[bench]]
name = "basic_operations"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
